--- a/ccs/styles.css
+++ b/ccs/styles.css
@@ -29,6 +29,16 @@
 	background-color: #3B7705;
 }
 
+#dialog {
+	position: absolute;
+	width: 50%;
+	height: 40%;
+	background-color: white;
+	display: none;
+}
 
 
+.dialog-show{
+	display: block;
+}
 
